package com.sunrise.dental.enums;

/**
 * Appointment lifecycle status states.
 */
public enum AppointmentStatus {
    BOOKED,
    CONFIRMED,
    COMPLETED,
    CANCELLED,
    NO_SHOW
}
