package com.sunrise.dental.enums;

/**
 * Supported payment tender methods.
 */
public enum PaymentMethod {
    CASH,
    CARD,
    BANK_TRANSFER
}
